Kafka 프레임워크 기반 메시징 생산자 환경 설정 및 구현

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -34,6 +34,15 @@ management:
             exposure:
                 include: info, health, metrics, refresh
 
+stream:
+    bindings:
+        output:
+            destination: testChannel
+            content-type: application/json
+        kafka:
+            zkNodes: localhost
+            brokers: localhost
+            
 eureka:
     client:
         # 유레카 디스커버리 서비스 등록 설정
