Kafka 프레임워크 기반 메시징 소비자 환경 설정 및 구현

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -36,6 +36,10 @@ management:
 
 stream:
     bindings:
+        input:
+            destination: tsetChannel
+            content-type: application/json
+            group: myGroup
         output:
             destination: testChannel
             content-type: application/json
