--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -21,6 +21,19 @@ spring:
 ---
 spring:
     profiles: dev
+    cloud:
+        stream:
+            bindings:
+                input:
+                    destination: testChannel
+                    content-type: application/json
+                output:
+                    destination: testChannel
+                    content-type: application/json
+            kafka:
+                binder:
+                    zkNodes: localhost
+                    brokers: localhost
                 
 server:
     # 로컬 기본 포트 지정
@@ -33,19 +46,6 @@ management:
         web:
             exposure:
                 include: info, health, metrics, refresh
-
-stream:
-    bindings:
-        input:
-            destination: tsetChannel
-            content-type: application/json
-            group: myGroup
-        output:
-            destination: testChannel
-            content-type: application/json
-        kafka:
-            zkNodes: localhost
-            brokers: localhost
             
 eureka:
     client:
