--- a/pom.xml
+++ b/pom.xml
@@ -110,13 +110,26 @@
             <artifactId>spring-cloud-starter-stream-kafka</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
+        <!-- 회복성 패턴을 적용하기 위한 Hystrix 의존성 추가 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.1.2.RELEASE</version>
+        </dependency>
+
         <!-- 유레카 서버와의 보안 연결을 위하여 security 의존성 추가 -->
 <!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>-->
+<!--        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-javanica</artifactId>
+            <version>1.5.18</version>
+        </dependency>-->
     </dependencies>
-
+ 
+ 
     <build>
         <!-- 로컬 YAML 프로퍼티 파일 위치 지정 -->
 <!--        <resources>
